frontend/src/App.scss
/**
 * @license
 * Copyright 2018 Streamlit Inc. All rights reserved.
 */

@import 'src/assets/css/variables';


body.embedded {
  overflow: hidden;
}

body.embedded:hover {
  overflow: auto;
}

.main {
  display: flex;
  flex-direction: column;
}

a,
a:visited {
  color: $primary;
}

a:hover,
a:active {
  color: $primary;
  text-decoration: underline;
}

header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 3.5rem;
  padding: 0 1rem;
  z-index: 100;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.streamlit-wide header {
  background-image: linear-gradient(180deg, #ffffff 25%, rgba(255, 255, 255, 0.5) 75%, transparent);
}

header .decoration {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  height: 2px;
  background-image: linear-gradient(90deg, #F63366, #FFFD80);
}

#brand {
  font-weight: 700;
  line-height: 1.5;
  flex: 1 0;
}

#brand a {
  color: $black;
}

#brand a:hover {
  color: $primary;
}

iframe {
  border: none;
  padding: 0;
  margin: 0;
}

.streamlit-regular .streamlit-container {
  margin: 80px auto;
}

.streamlit-wide .streamlit-container {
  margin-top: 80px;
  width: unset;
  max-width: unset;
}

.streamlit-embedded .streamlit-container {
  width: unset;
  max-width: unset;
  padding-left: 0px;
  padding-right: 0px;
}

.streamlit-embedded header {
  display: none;
}

.progress {
  background-color: $gray-lightest;
}

.progress-bar {
  background-color: $blue;
}

.icon {
  width: 0.9rem;
  height: 0.9rem;
}

@media (max-width: 768px) {
  header,
  .streamlit-wide header {
    position: absolute;
    background: unset;
  }
}

// Utility class for underlining first letter in a text
.underlineFirstLetter::first-letter {
  text-decoration: underline;
}

